Fixed horizontal scrollbar, negative value in Twitch-live refreshTimer directly after a reload.
Lowerd vod expire to 3 hours.
Changed to save all vods in 1 object and cache it with 1 expire date insted of each has it own expire, object and cache.
Added refresh/expire timer besides Twitch-vods reload button.
Fixed reload button to function correctly.

--- a/src/components/Twitch/Twitch.module.scss
+++ b/src/components/Twitch/Twitch.module.scss
@@ -199,9 +199,16 @@
 }
 
 .refreshTimer {
-  position: relative;
+  position: absolute;
   left: 260px;
+  width: max-content;
   // bottom: 11px;
+  color: $greyInfo;
+}
+.vodRefreshTimer {
+  position: relative;
+  left: 190px;
+  top: 31px;
   color: $greyInfo;
 }
 
